[gd_scene load_steps=17 format=3 uid="uid://d4gjglrwmtar4"]

[ext_resource type="Script" uid="uid://seeaclvwcq0r" path="res://node_3d.gd" id="1_1r08c"]
[ext_resource type="PackedScene" uid="uid://dxgh4imubsngc" path="res://ac.tscn" id="2_yxcfd"]
[ext_resource type="PackedScene" uid="uid://dssmgx0csel6d" path="res://runway.tscn" id="4_w0gyf"]
[ext_resource type="PackedScene" uid="uid://xq3lvbf0alcb" path="res://house_1.tscn" id="5_hatek"]
[ext_resource type="PackedScene" uid="uid://c8env1r0nment" path="res://environment.tscn" id="6_envir"]
[ext_resource type="Texture2D" uid="uid://cditync2r7ipo" path="res://Textures/coast_sand_rocks_02_diff_4k.png" id="6_i5arm"]
[ext_resource type="Texture2D" uid="uid://tgqmh32fcwbu" path="res://Textures/coast_sand_rocks_02_rough_4k.png" id="7_wc5p8"]
[ext_resource type="PackedScene" uid="uid://dklme3dr7kr6q" path="res://Assets/schmerlat/SH_Hangar.glb" id="8_jsk3o"]

[sub_resource type="Gradient" id="Gradient_wc5p8"]
offsets = PackedFloat32Array(0.2, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jsk3o"]
noise_type = 2
frequency = 0.03
cellular_jitter = 3.0
cellular_return_type = 0
domain_warp_enabled = true
domain_warp_type = 1
domain_warp_amplitude = 50.0
domain_warp_fractal_type = 2
domain_warp_fractal_lacunarity = 1.5
domain_warp_fractal_gain = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4arys"]
noise = SubResource("FastNoiseLite_jsk3o")
color_ramp = SubResource("Gradient_wc5p8")
seamless = true

[sub_resource type="Terrain3DMaterial" id="Terrain3DMaterial_6iypd"]
_shader_parameters = {
&"bias_distance": 512.0,
&"blend_sharpness": 0.5,
&"depth_blur": 0.0,
&"dual_scale_far": 170.0,
&"dual_scale_near": 100.0,
&"dual_scale_reduction": 0.3,
&"dual_scale_texture": 0,
&"enable_macro_variation": true,
&"enable_projection": true,
&"flat_terrain_normals": false,
&"macro_variation1": Color(1, 1, 1, 1),
&"macro_variation2": Color(1, 1, 1, 1),
&"macro_variation_slope": 0.333,
&"mipmap_bias": 1.0,
&"noise1_angle": 0.0,
&"noise1_offset": Vector2(0.5, 0.5),
&"noise1_scale": 0.0400000019,
&"noise2_scale": 0.076,
&"noise_texture": SubResource("NoiseTexture2D_4arys"),
&"projection_threshold": 0.8,
&"tri_scale_reduction": 0.3
}
dual_scaling = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tereu"]
transparency = 4
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("6_i5arm")
backlight_enabled = true
backlight = Color(0.5, 0.5, 0.5, 1)
distance_fade_mode = 1
distance_fade_min_distance = 128.0
distance_fade_max_distance = 96.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_cdqbm"]
generated_type = 1
height_offset = 0.5
material_override = SubResource("StandardMaterial3D_tereu")
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="Terrain3DTextureAsset" id="Terrain3DTextureAsset_wc5p8"]
name = "coast_sand_rocks_02_diff_4k"
albedo_texture = ExtResource("6_i5arm")
normal_texture = ExtResource("7_wc5p8")

[sub_resource type="Terrain3DAssets" id="Terrain3DAssets_tcnuu"]
mesh_list = Array[Terrain3DMeshAsset]([SubResource("Terrain3DMeshAsset_cdqbm")])
texture_list = Array[Terrain3DTextureAsset]([SubResource("Terrain3DTextureAsset_wc5p8")])

[node name="Node3D2" type="Node3D" unique_id=1069261226]
script = ExtResource("1_1r08c")

[node name="AC" parent="." unique_id=754408209 instance=ExtResource("2_yxcfd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.999999, -0.13541573, 1.3129692, -0.24543622)

[node name="Environment" parent="." unique_id=1222445889 instance=ExtResource("6_envir")]

[node name="Control" type="Control" parent="." unique_id=1312208183]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 255.0
offset_bottom = 208.0

[node name="Label" type="Label" parent="Control" unique_id=1807507576]
modulate = Color(0.509804, 1, 1, 1)
layout_mode = 0
offset_left = 35.0
offset_top = 2248.0
offset_right = 256.0
offset_bottom = 2321.0
scale = Vector2(5, 5)
text = "Text"
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control" unique_id=144761800]
modulate = Color(0.364706, 1, 1, 1)
layout_mode = 0
offset_left = 1122.0
offset_top = 2353.0
offset_right = 1357.0
offset_bottom = 2406.0
scale = Vector2(5, 5)
text = "text 2"

[node name="Label3" type="Label" parent="Control" unique_id=1719974323]
modulate = Color(0.482353, 1, 1, 1)
layout_mode = 0
offset_left = 1999.0
offset_top = 2342.0
offset_right = 2301.0
offset_bottom = 2402.0
scale = Vector2(5, 5)
text = "text 3"

[node name="Label4" type="Label" parent="Control" unique_id=531801771]
modulate = Color(0.490196, 1, 1, 1)
layout_mode = 0
offset_left = 3089.0
offset_top = 2329.0
offset_right = 3330.0
offset_bottom = 2371.0
scale = Vector2(5, 5)
text = "Text 4"

[node name="Label5" type="Label" parent="Control" unique_id=201692843]
modulate = Color(0.329412, 1, 1, 1)
layout_mode = 0
offset_left = 3818.0
offset_top = 2326.0
offset_right = 4016.0
offset_bottom = 2361.0
scale = Vector2(5, 5)
text = "Text 5
"

[node name="Runway" parent="." unique_id=1224639926 instance=ExtResource("4_w0gyf")]
transform = Transform3D(-2.0202678e-07, 0, 4.36856, 0, 1.0176336, 0, -4.6218257, 0, -1.90956e-07, 2.409881, 0.05941534, 303.30914)

[node name="House1" parent="." unique_id=1166139611 instance=ExtResource("5_hatek")]
transform = Transform3D(0.00219913, 0, -0.999998, 0, 1, 0, 0.999998, 0, 0.00219913, 302.79245, 7.35746, -79.6619)

[node name="House2" parent="." unique_id=329612252 instance=ExtResource("5_hatek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -256.099, 6.755657, 1100)

[node name="House5" parent="." unique_id=409902025 instance=ExtResource("5_hatek")]
transform = Transform3D(-0.0138051, 0, -0.999905, 0, 1, 0, 0.999905, 0, -0.0138051, -1068.16, -5.32579, -2428.81)

[node name="House6" parent="." unique_id=1529045327 instance=ExtResource("5_hatek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2157.93, -3.32863, -3459.35)

[node name="Terrain3D" type="Terrain3D" parent="." unique_id=2104631735]
data_directory = "res://Terra3DData"
material = SubResource("Terrain3DMaterial_6iypd")
assets = SubResource("Terrain3DAssets_tcnuu")
top_level = true
metadata/_edit_lock_ = true

[node name="SH_Hangar" parent="." unique_id=1908893876 instance=ExtResource("8_jsk3o")]
transform = Transform3D(-0.009494454, 0, -0.99995494, 0, 1, 0, 0.99995494, 0, -0.009494454, 153.66931, -9.595768, 324.67627)
